--- a/RedisCacheDemo/RedisCacheDemo/RedisCacheDemo.csproj
+++ b/RedisCacheDemo/RedisCacheDemo/RedisCacheDemo.csproj
@@ -6,6 +6,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="ServiceStack.Redis" Version="5.12.0" />
     <PackageReference Include="StackExchange.Redis" Version="2.2.4" />
   </ItemGroup>
 
