--- a/EventHubsSample/EventHubsSample.csproj
+++ b/EventHubsSample/EventHubsSample.csproj
@@ -9,6 +9,8 @@
 
   <ItemGroup>
     <PackageReference Include="Azure.Messaging.EventHubs" Version="5.7.0-beta.1" />
+    <PackageReference Include="Azure.Messaging.EventHubs.Processor" Version="5.7.0-beta.1" />
+    <PackageReference Include="Azure.Storage.Blobs" Version="12.11.0-beta.1" />
   </ItemGroup>
 
 </Project>
